--- a/markt/scss/app.scss
+++ b/markt/scss/app.scss
@@ -64,9 +64,13 @@ h1, h2,h3,h4 {
 	font-family: $body-font-family;
 }
 
-main {
-	height: 100%;
+html, main {
 	width: 100%;
+  height:100vh;
+}
+
+main {
+  display: flex;
 }
 
 #markt {
