--- a/markt/scss/app.scss
+++ b/markt/scss/app.scss
@@ -64,12 +64,9 @@ h1, h2,h3,h4 {
 	font-family: $body-font-family;
 }
 
-html, main {
+html, #index main {
 	width: 100%;
   height:100vh;
-}
-
-main {
   display: flex;
 }
 
