--- a/markt/scss/app.scss
+++ b/markt/scss/app.scss
@@ -64,7 +64,11 @@ h1, h2,h3,h4 {
 	font-family: $body-font-family;
 }
 
-html, #index main {
+.hide {
+  display: none;
+}
+
+#index main {
 	width: 100%;
   height:100vh;
   display: flex;
@@ -197,6 +201,11 @@ header {
     border-bottom: 1px solid #f2f2f2;
     color: $font;
     overflow: hidden;
+        -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 2s; /* Firefox < 16 */
+        -ms-animation: fadein 2s; /* Internet Explorer */
+         -o-animation: fadein 2s; /* Opera < 12.1 */
+            animation: fadein 2s;
     &:last-child {
       border-bottom: none;
     }
@@ -325,6 +334,7 @@ h2 + label{
 // Modal
 
 #animatedModal {
+  opacity: 0;
 	background-color: rgba(33, 33, 33, 0.9) !important;
 	color: white;
 	.close-animatedModal {
@@ -392,4 +402,35 @@ h2 + label{
 
 textarea {
 	height: initial;
+}
+
+// Fadein
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
